Major: Revise invisible switch implementation * Tag #27 - Use a more similar approach to what OmniSidebar does * This feature is no longer tied to auto hide/show * This allows us to have visual feedback on the sidebar switch and style it if users would want to do so * This doesn't have to listen much on mousemove events on the appcontent plus it's more accurate on the hover area * This also allows the sidebar to open when dragging something above it even if the sidebar switch is invisible (previously, it would be a bit more tricky to implement)

--- a/skin/css/aios.css
+++ b/skin/css/aios.css
@@ -17,6 +17,9 @@ window[aiosOrient="right"] toolbox #aios-toggle-toolbox > toolbar #aios-toggle-t
 #aios-toggle-toolbar {
     -moz-appearance: none;
 }
+#aios-toggle-button[invSwitch="true"], #aios-toggle-toolbar[invSwitch="true"] {
+    position: fixed;
+}
 #aios-toolbox-left, #aios-toolbox-right, #aios-toolbox-sidebartop, #aios-toolbox-sidebartop2, #aios-toolbox-sidebarbottom, #aios-sbhtoolbox {
     border: none;
 }
